fix cart items overflow from cart container

--- a/react-vite/src/components/Navigation/Cart/Cart.module.css
+++ b/react-vite/src/components/Navigation/Cart/Cart.module.css
@@ -1,7 +1,6 @@
 .checkoutContainer {
     /* width: 100%;
     height: 100%; */
-
 }
 
 
@@ -39,6 +38,8 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    height: 100vh;
+    overflow-y: auto;
 }
 
 .checkout__summary {
